Bolded name of added movie.

--- a/templates/add.html
+++ b/templates/add.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>{{ new_movie_escaped }} has been added to your Watchlist.</p>
+<p> <strong>{{ new_movie_escaped }}</strong> has been added to your Watchlist.</p>
 {% endblock %}
